<resources>
    <string name="app_name">MyClientUsingRetrofit</string>
    <string name="parking_spot_number">Informe a vaga de estacionamento</string>
    <string name="parking_spot_form">Parking Spot Form</string>
    <string name="license_plate_car">Informe a sua CNH</string>
    <string name="brand_car">Informe o marca</string>
    <string name="model_car">Informe o modelo</string>
    <string name="color_car">Informe  a cor</string>
    <string name="responsible_name">Informe o nome do responsável</string>
    <string name="apartment">Informe o apartamento</string>
    <string name="block">Informe o block</string>
    <string name="save_parking">save parking</string>
</resources>